Fix firefox overflow.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,7 @@ body {
     position: relative;
     height: 100vh;
     color: #555;
+    overflow:hidden;
 }
 
 /*///////////////////////////////////
